--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import '@fortawesome/fontawesome-free/css/all.min.css'; */
 
 * {
   padding: 0;
