--- a/admin/src/components/Sidebar/Sidebar.css
+++ b/admin/src/components/Sidebar/Sidebar.css
@@ -8,7 +8,8 @@
 
 .sidebar-options{
     padding-top: 50px;
-    padding-left: 20%;
+    padding-left: 0;
+    border-right: 20%;
     display: flex;
     flex-direction: column;
     gap: 20px;
