--- a/admin/src/pages/Orders/Orders.css
+++ b/admin/src/pages/Orders/Orders.css
@@ -1,43 +1,84 @@
-.order-item{
+.order-item:nth-child(even) {
+    background-color: #ffffffac;
+}
+
+.order-item:nth-child(odd) {
+    background-color: #f1e9e9;
+}
+
+.order-item {
     display: grid;
     grid-template-columns: 0.5fr 2fr 1fr 1fr 1fr;
     align-items: start;
     gap: 30px;
     border: 1px solid tomato;
     padding: 20px;
-    margin: 30px 0px;
+    margin: 0;
     font-size: 14px;
     color: #505050;
+
 }
-.order-item-food, .order-item-name{
+
+.order-item-food,
+.order-item-name {
     font-weight: 600;
 }
-.order-item-name{
+
+.order-item-name {
     margin-top: 30px;
     margin-bottom: 5px;
 }
-.order-item-address{
+
+.order-item-address {
     margin-bottom: 10px;
 }
-.order-item select{
+
+.order-item select {
     background-color: #ffe8e4;
     border: 1px solid tomato;
-    width: max(10vw,120px);
+    width: max(10vw, 120px);
     padding: 10px;
     outline: none;
 }
 
+.a-buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.a-buttons button {
+    padding: 5px 10px;
+    border: 1px solid tomato;
+    border-radius: 4px;
+    background-color: #ffe8e4;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.a-buttons button.active {
+    background-color: tomato;
+    color: white;
+    border-color: tomato;
+}
+
+.order-status-buttons button:hover {
+    background-color: #ffcccb;
+}
+
+
 @media(max-width:1000px) {
-    .order-item{
+    .order-item {
         font-size: 12px;
         grid-template-columns: 0.5fr 2fr 1fr;
         padding: 15px 8px;
     }
-    .order-item select{
+
+    .order-item select {
         padding: 5px;
         font-size: 12px;
     }
-    .order-item img{
+
+    .order-item img {
         width: 40px;
     }
 }
